--- a/IHAHabits/res/values/strings.xml
+++ b/IHAHabits/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
 
+    <string name="last_week">Last week</string>
+    <string name="last_month">Last month</string>
+    <string name="last_3_months">Last 3 months</string>
+    
+    <string-array name="time_spinner">
+        <item>@string/last_week</item>
+        <item>@string/last_month</item>
+        <item>@string/last_3_months</item>
+    </string-array>
+    
 </resources>
